--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
       <form class="form-horizontal">
         <div class="form-group">
           <input type="text" class="form-control" id="product-name" placeholder="Product name"></input>
-          <p class="error" id="name-error"></p>
         </div>
         <div class="form-group">
           <input type="number" class="form-control" id="product-price" placeholder="Product price"></input>
@@ -68,6 +67,7 @@
           <input type="text" class="form-control" id="product-img" placeholder="Img Url"></input>
         </div>
       </form>
+      <p class="error text-center" id="name-error"></p>
       <button class="btn submit-product">Submit</button>
     </div>
   </div>
