made rendering total react to a change with the cart collection, and cart item validation to use cid instead of name

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <script id="item-card" type="text/x-handlebars-template">
     <div class="col-md-4">
       <div class="card-container">
-        <div class="card item" item data-name="{{ name }}" data-price="{{ price }}">
+        <div class="card item" item data-name="{{ name }}" data-price="{{ price }}" data-cid="{{ cid }}">
           <div class="pricebox">
             <p class="price"> ${{price}} </p>
           </div>
